--- a/Backend/3.1 Express Setup/public/index.html
+++ b/Backend/3.1 Express Setup/public/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <form action="/login" class="login" method="POST">
+        <form action="/submit" class="login" method="POST">
             <label for="email" class="email">Email</label>
             <input type="text" name="email" required>
             <label for="password">Password</label>
@@ -42,5 +42,5 @@
             <button type="submit" value="submit">submit</button>
         </form>
     </div>
-</bo dy>
+</body>
 </html>
